updates personne et les details

--- a/src/app/administration/personnes/list-personnes/list-personnes.component.html
+++ b/src/app/administration/personnes/list-personnes/list-personnes.component.html
@@ -64,14 +64,7 @@
 
                                         <div
                                             class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-                                            <i class="pi pi-file" (click)="dt.exportCSV()" pTooltip="CSV"
-                                                tooltipPosition="bottom" style="
-                                            font-size: 1.5rem;
-                                            cursor: pointer;
-                                            margin-right: 13px;
-                                            color: #757575;
-                                            margin-left: 13px;
-                                        "></i>
+               
 
                                             <i class="pi pi-file-excel" (click)="exportExcel()" pTooltip="XLS"
                                                 tooltipPosition="bottom" style="
@@ -125,11 +118,12 @@
                                 </td>
                                 <td>
                                     <span class="p-column-title">Date de naissance</span>
-                                    {{ item?.date_naissance }}
+                                    {{ item?.date_naissance | date:"MMM, dd yyyy" }}
                                 </td>
                                 <td>
                                     <span class="p-column-title">statut</span>
-                                    {{ item?.statut }}
+                                    <p-tag [severity]="item.statut == 'En vie' ? 'success' : 'danger'"  [value]= item?.statut></p-tag>
+
                                 </td>
                                 <td>
                                     <span class="p-column-title">sexe</span>
@@ -137,12 +131,13 @@
                                 </td>
                                 <td>
                                     <span class="p-column-title">is_chef_menage</span>
-                                    {{ item?.is_chef_menage }}
+                                    <p-tag [severity]="item.is_chef_menage == true ? 'primary' : 'info'"  [value]= "item.is_chef_menage == true ? 'Oui' : 'Non'"></p-tag>
+
                                 </td>
                  
                                 <td>
                                     <div class="flex">
-                                        <i class="pi pi-eye icon mr-3" routerLink=""
+                                        <i class="pi pi-eye icon mr-3" routerLink="../details/{{item.id}}"
                                             style="font-size: 1.5rem"></i>
                                         <i class="pi pi-pencil icon mr-3" (click)="edit(item)"
                                             style="font-size: 1.5rem"></i>
@@ -415,20 +410,49 @@
        
 
     </div>
+    <div class="col mt-2" *ngIf="!is_chef_menage.value">
+        <span class="p-float-label">
+            <p-dropdown formControlName="parentId"
+            [options]="chefs"
+            optionLabel="nom"
+           [(ngModel)]="temporaile.parentId"
+            appendTo="body"
+            id="residence"
+            optionValue="id"
+              [style]="{
+               width: '100%',
+               borderRadius: '10px',
+               minHeight: '48px'
+           }" placeholder="Selectionner le chef de menage"></p-dropdown>
+
+
+
+            <label style="
+                    font-weight: bold;
+                    color: rgb(73, 73, 73);
+                " for="Per_id">Chef de famille *</label>
+            <div *ngIf="Per_id.touched && Per_id.invalid" class="erreur">
+                <div *ngIf="Per_id.errors.required">
+                    Le chef de menage est requis.
+                </div>
+            </div>
+        </span>
+    </div>
  
 </form>
 <ng-template pTemplate="footer">
 
     <button pButton pRipple   class="p-button-text" label="Annuler"
         (click)="addEdit = false"></button>
-        <button pButton pRipple class="p-button" *ngIf="formTitle == 'Ajouter une personne'" size="small" label="Valider" (click)="save()"
+        <button pButton pRipple class="p-button" *ngIf="formTitle == 'Ajouter une Personne'" size="small" label="Valider" (click)="save()"
         [disabled]="state">
         <i *ngIf="state" class="pi pi-spin pi-spinner"></i>
     </button>
-    <button pButton pRipple *ngIf="formTitle == 'Modifier une personne'" class="p-button" size="small" label="Modifier" (click)="modifier()"
+    <button pButton pRipple *ngIf="formTitle == 'Modifier une Personne'" class="p-button" size="small" label="Modifier" (click)="modifier()"
     [disabled]="state">
     <i *ngIf="state" class="pi pi-spin pi-spinner"></i>
 </button>
 </ng-template>
 </p-dialog>
 
+<app-portrait titlePage="Liste Personne" [tableHeaders]="cols" [tableRows]="tableData"></app-portrait>
