--- a/src/app/administration/menage/list-menages/list-menages.component.html
+++ b/src/app/administration/menage/list-menages/list-menages.component.html
@@ -140,10 +140,10 @@
                         <td>
                             <div class="flex">
                                 <i class="pi pi-eye icon mr-3" routerLink="../details/{{item?.id}}"
-                                    style="font-size: 1.5rem"></i>
+                                    style="font-size: 1.5rem; cursor: pointer"></i>
                                 <i class="pi pi-pencil icon mr-3" (click)="edit(item,data.branche.id)"
-                                    style="font-size: 1.5rem"></i>
-                                <i class="pi pi-trash icon" (click)="delete(item)" style="font-size: 1.5rem"></i>
+                                    style="font-size: 1.5rem;  cursor: pointer"></i>
+                                <i class="pi pi-trash icon" (click)="delete(item)" style="font-size: 1.5rem; cursor: pointer"></i>
                             </div>
                         </td>
                     </tr>
