--- a/src/app/administration/personnes/list-personnes/list-personnes.component.html
+++ b/src/app/administration/personnes/list-personnes/list-personnes.component.html
@@ -142,12 +142,12 @@
                  
                                 <td>
                                     <div class="flex">
-                                        <i class="pi pi-eye icon mr-3" routerLink="../details/{{item.id}}"
-                                            style="font-size: 1.5rem"></i>
+                                        <i class="pi pi-eye icon mr-3"  routerLink="../details/{{item.id}}"
+                                            style="font-size: 1.5rem; cursor: pointer;"></i>
                                         <i class="pi pi-pencil icon mr-3" (click)="edit(item)"
-                                            style="font-size: 1.5rem"></i>
+                                            style="font-size: 1.5rem; cursor: pointer"></i>
                                         <i class="pi pi-trash icon" (click)="opendeleteDialog(item)"
-                                            style="font-size: 1.5rem"></i>
+                                            style="font-size: 1.5rem; cursor: pointer"></i>
                                     </div>
                                 </td>
                             </tr>
